--- a/app/assets/stylesheets/layouts/menu.css.scss
+++ b/app/assets/stylesheets/layouts/menu.css.scss
@@ -1,5 +1,8 @@
 #menu {
 	
+    background: #d2d2d2;
+    box-shadow: inset 0em 1em 40px #d8d8d8;    
+    
 	.container {
 		padding-top: 15px;
 		padding-bottom: 15px;
@@ -7,21 +10,21 @@
 	}
 	
 	a {
-		font-size: 1.2em;
-		/* font-style: italic; */
-		color: hsl(0, 0%, 15%);
-		display: inline-block;
-		padding-bottom: 3px;
-		border-bottom: 1px solid hsl(0, 0%, 15%);
-		margin-right: 20px;
-		margin-bottom: 4px;
-		text-decoration: none;
+      color: black;
+      display: inline-block;
+      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+      font-size: 1.2em;
+      font-weight: bold;
+      margin-right: 20px;
+      margin-bottom: 4px;
+      padding: 3px 14px;
+      text-decoration: none;
+      text-shadow: 0px 1px 1px white;
 	}
 
 	a:hover {
-		color: grey;
-		border-bottom: 1px solid grey;
-		transition: all 0.2s;
+      color: white;
+      text-shadow: 0px 1px 1px black;
 	}
 
 	
